--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -5,6 +5,9 @@
         <title>BikeCraft</title>
         <meta name="description" content="projeto realizado pelas aulas da Origamid">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./style/normalize.css">
+        <link rel="stylesheet" href="./style/reset.css">
+        <link rel="stylesheet" href="./style/grid.css">
         <link rel="stylesheet" href="./style/style.css">
     </head>
     <body>
