--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -12,11 +12,24 @@
     </head>
     <body>
         
-        <header>
-            <div>
-                
-            </div>
-        </header>
+        <header class="header">
+            <div class="container">
+
+                <a href="index.html" class="grid-4">
+                    <img src="assets/bikcraft.svg" alt="BikeCraft" />
+                </a>
+
+                <nav class="headerMenu grid-12">
+                    <ul>
+                        <li><a href="sobre.html">Sobre</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav><!-- Nav Desktop-->
+
+            </div><!-- Container -->
+        </header><!-- Header -->
 
     </body>
 </html>
