--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -31,5 +31,19 @@
             </div><!-- Container -->
         </header><!-- Header -->
 
+        <section class="introducao">
+            <div class="container">
+
+                <h1>Bicicletas Feitas a Mão</h1>
+                <blockquote class="quote-externo">
+                    <p>"não tenha nada em cusa casa que voce não considere util ou acredita ser bonito"</p>
+                    <cite>WILLIAM MORRIS</cite>
+                </blockquote><!-- Blockquote -->
+
+                <a href="produtos.html" class="btn">Orçamento</a>
+
+            </div><!-- Container -->
+        </section><!-- Introducao -->
+
     </body>
 </html>
