--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -45,5 +45,42 @@
             </div><!-- Container -->
         </section><!-- Introducao -->
 
+        <section class="container produtos">
+            <h2 class="subtitulo">Produtos</h2>
+            <ul class="produtos_lista">
+
+                <li class="grid-1-3">
+                    <div class="produtos_icone">
+                        <img src="./assets/produtos/passeio.svg" alt="BikeCraft Passeio" />
+                    </div>
+                    <h3>Passeio</h3>
+                    <p>Ainda assim, existem duvidas a respeito de como a necessidade de renovação.</p>
+                </li><!-- grid 1-3 -->
+
+                <li class="grid-1-3">
+                    <div class="produtos_icone">
+                        <img src="./assets/produtos/esporte.svg" alt="BikeCraft Passeio" />
+                    </div>
+                    <h3>Esporte</h3>
+                    <p>Ainda assim, existem duvidas a respeito de como a necessidade de renovação.</p>
+                </li><!-- grid 1-3 -->
+
+                <li class="grid-1-3">
+                    <div class="produtos_icone">
+                        <img src="./assets/produtos/retro.svg" alt="BikeCraft Passeio" />
+                    </div>
+                    <h3>Retro</h3>
+                    <p>Ainda assim, existem duvidas a respeito de como a necessidade de renovação.</p>
+                </li><!-- grid 1-3 -->
+
+            </ul><!-- Produtos Lista -->
+
+            <div class="call">
+                <p>clique aqui e veja os detalhes dos produtos</p>
+                <a href="produtos.html" class="btn btn-preto">Produtos</a>
+            </div><!-- Call -->
+
+        </section><!-- Container -->
+
     </body>
 </html>
