--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -79,8 +79,23 @@
                 <p>clique aqui e veja os detalhes dos produtos</p>
                 <a href="produtos.html" class="btn btn-preto">Produtos</a>
             </div><!-- Call -->
+        </section><!-- Produtos -->
 
-        </section><!-- Container -->
+        <section class="portfolio">
+            <div class="container">
+                <h2 class="subtitulo">Portfolio</h2>
+                <ul class="portfolio-lista">
+                    <li class="grid-8" ><img src="./assets/portfolio/retro.jpg" alt="BikeCraft Retro"/></li>
+                    <li class="grid-8" ><img src="./assets/portfolio/passeio.jpg" alt="BikeCraft Passeio"/></li>
+                    <li class="grid-16" ><img src="./assets/portfolio/esporte.jpg" alt="BikeCraft Esporte"/></li>
+                </ul><!-- Portfolio Lista -->
+
+                <div class="call">
+                    <p>Conheça mais o nosso portfolio</p>
+                    <a href="portfolio.html" class="btn">Portfolio</a>
+                </div><!-- Call -->
+            </div><!-- Container -->
+        </section><!-- Portfolio -->
 
     </body>
 </html>
