--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -97,5 +97,29 @@
             </div><!-- Container -->
         </section><!-- Portfolio -->
 
+        <section class="qualidade container" >
+            <h2 class="subtitulo">Qualidade</h2>
+            <img src="./assets/bikcraft-qualidade.svg" alt="BikeCraft Qualidade">
+            <ul class="qualidade-lista">
+                <li class="grid-1-3">
+                    <h3>Durabilidade</h3>
+                    <p>Ainda assim, existem duvidas a respeito de como a necessidade de renovação.</p>
+                </li>
+                <li class="grid-1-3">
+                    <h3>Design</h3>
+                    <p>Ainda assim, existem duvidas a respeito de como a necessidade de renovação.</p>
+                </li>
+                <li class="grid-1-3">
+                    <h3>Sustentabilidade</h3>
+                    <p>Ainda assim, existem duvidas a respeito de como a necessidade de renovação.</p>
+                </li>
+            </ul><!-- Qualidade Lista -->
+
+            <div class="call">
+                <p>Conheça mais a nossa historia! </p>
+                <a href="sobre.html" class="btn btn-preto">Sobre</a>
+            </div><!-- Call -->
+        </section><!-- Qualidade -->
+
     </body>
 </html>
