--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -121,5 +121,51 @@
             </div><!-- Call -->
         </section><!-- Qualidade -->
 
+        <section class="quebra">
+            <blockquote class="quote-externo container">
+                <p>"O verdadeiro segredo da felicidade esta em ter um genuino interesse por todos
+                    os detalhes da vida cotidiana"</p>
+                <cite>WILLIAM MORRIS</cite>
+            </blockquote><!-- Blockquote -->
+        </section><!-- Quebra-->
+
+        <footer>
+            <div class="footer">
+                <div class="container">
+
+                    <div class="grid-8 footer-historia">
+                        <h3>Nossa Historia</h3>
+                        <p>O verdadeiro segredo da felicidade esta em ter um genuino interesse por todos
+                            os detalhes da vida cotidiana</p>
+                    </div><!-- Grid-8 -->
+
+                    <div class="grid-4 footer-contato">
+                        <h3>Contato</h3>
+                        <ul>
+                            <li>- (45) 9 9999-8888</li>
+                            <li>contato@bikecraft.com</li>
+                            <li>Porto Alegre - RS</li>
+                        </ul>
+                    </div><!-- Grid-4 -->
+
+                    <div class="grid-4 footer-redes">
+                        <h3>Contato</h3>
+                        <ul>
+                            <li><a href="#"><img src="./assets/redes-sociais/facebook.svg" alt="Facebook" target="_blank"></a></li>
+                            <li><a href="#"><img src="./assets/redes-sociais/instagram.svg" alt="Facebook" target="_blank"></a></li>
+                            <li><a href="#"><img src="./assets/redes-sociais/twitter.svg" alt="Facebook" target="_blank"></a></li>
+                        </ul>
+                    </div><!-- Grid-4 -->
+
+                </div><!-- Container -->
+            </div><!-- footer -->
+
+            <div class="copy">
+                <div class="container">
+                    <p class="grid-16">BikeCraft 2021 - Todos os Direitos Reservados</p>
+                </div><!-- Container -->
+            </div><!-- Copy -->
+        </footer><!-- Footer -->
+
     </body>
 </html>
