--- a/Origamid/BikeCraft/produtos.html
+++ b/Origamid/BikeCraft/produtos.html
@@ -39,14 +39,30 @@
             </div><!-- Container -->
         </section><!-- Introducao-Interna -->
 
-        <section class="container">
+        <section class="container produto-item">
             <div class="grid-11">
                 <img src="assets/produtos/bikcraft-passeio-1.jpg" alt="BikCraft Passeio">
+                <h2>Passeio</h2>
             </div><!-- Grid-11 -->
 
-            <div class="grid-5">
+            <div class="grid-5 produto-icone">
                 <img src="assets/produtos/passeio.svg" alt="BikCraft Passeio">
             </div><!-- Grid 5 -->
+
+            <div class="grid-8">
+                <img src="assets/produtos/bikcraft-passeio-2.jpg" alt="BikCraft Passeio">
+            </div><!-- Grid 8 -->
+
+            <div class="grid-8 produto-info">
+                <p>O verdadeiro segredo da felicidade esta em ter um genuino interesse por todos
+                    os detalhes da vida cotidiana</p>
+                <ul>
+                    <li>Conforto</li>
+                    <li>Velocidade</li>
+                    <li>Design</li>
+                    <li>Versatilidade</li>
+                </ul>
+            </div><!-- Grid 8  -->
         </section><!-- Container -->
 
         <section class="quebra">
