--- a/Origamid/BikeCraft/produtos.html
+++ b/Origamid/BikeCraft/produtos.html
@@ -65,6 +65,58 @@
             </div><!-- Grid 8  -->
         </section><!-- Container -->
 
+        <section class="container produto-item">
+            <div class="grid-11">
+                <img src="assets/produtos/bikcraft-esporte-1.jpg" alt="BikCraft Esporte">
+                <h2>Esporte</h2>
+            </div><!-- Grid-11 -->
+
+            <div class="grid-5 produto-icone">
+                <img src="assets/produtos/esporte.svg" alt="BikCraft Esporte">
+            </div><!-- Grid 5 -->
+
+            <div class="grid-8">
+                <img src="assets/produtos/bikcraft-esporte-2.jpg" alt="BikCraft Esporte">
+            </div><!-- Grid 8 -->
+
+            <div class="grid-8 produto-info">
+                <p>O verdadeiro segredo da felicidade esta em ter um genuino interesse por todos
+                    os detalhes da vida cotidiana</p>
+                <ul>
+                    <li>Conforto</li>
+                    <li>Velocidade</li>
+                    <li>Design</li>
+                    <li>Versatilidade</li>
+                </ul>
+            </div><!-- Grid 8  -->
+        </section><!-- Container -->
+
+        <section class="container produto-item">
+            <div class="grid-11">
+                <img src="assets/produtos/bikcraft-retro-1.jpg" alt="BikCraft Retro">
+                <h2>Retro</h2>
+            </div><!-- Grid-11 -->
+
+            <div class="grid-5 produto-icone">
+                <img src="assets/produtos/retro.svg" alt="BikCraft Retro">
+            </div><!-- Grid 5 -->
+
+            <div class="grid-8">
+                <img src="assets/produtos/bikcraft-retro-2.jpg" alt="BikCraft Retro">
+            </div><!-- Grid 8 -->
+
+            <div class="grid-8 produto-info">
+                <p>O verdadeiro segredo da felicidade esta em ter um genuino interesse por todos
+                    os detalhes da vida cotidiana</p>
+                <ul>
+                    <li>Conforto</li>
+                    <li>Velocidade</li>
+                    <li>Design</li>
+                    <li>Versatilidade</li>
+                </ul>
+            </div><!-- Grid 8  -->
+        </section><!-- Container -->
+
         <section class="quebra">
             <blockquote class="quote-externo container">
                 <p>"O verdadeiro segredo da felicidade esta em ter um genuino interesse por todos
