--- a/Origamid/BikeCraft/produtos.html
+++ b/Origamid/BikeCraft/produtos.html
@@ -22,8 +22,8 @@
 
                 <nav class="headerMenu grid-12">
                     <ul>
-                        <li><a href="sobre.html" class="ativo" >Sobre</a></li>
-                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="sobre.html">Sobre</a></li>
+                        <li><a href="produtos.html" class="ativo">Produtos</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
@@ -116,6 +116,41 @@
                 </ul>
             </div><!-- Grid 8  -->
         </section><!-- Container -->
+
+        <section class="orcamento">
+            <div class="container">
+
+                <h2 class="subtitulo">Orçamento</h2>
+                <form id="form-orcamento" class="grid-8">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" />
+                    <label for="email">E-mail</label>
+                    <input type="text" id="email" /> 
+                    <label for="telefone">Telefone</label>
+                    <input type="text" id="telefone"/>
+                    <label for="mensagem">Especificações</label>
+                    <textarea id="mensagem" placeholder="Sua mensagem..."></textarea>
+                    <button class="btn" type="submit">Enviar</button>
+                </form><!-- form-orçamento -->
+
+                <div class="orcamento-dados grid-8">
+                    <h3>Dados</h3>
+                    <span>+55 45 98888-7777</span>
+                    <span>orçamento@bikecraft.com</span>
+
+                    <h3>Monte a sua BikeCraft</h3>
+                    <p>Escolha as Especificações</p>
+                    <ul>
+                        <li>- Cores</li>
+                        <li>- Estilo</li>
+                        <li>- Medidas</li>
+                        <li>- Acessorios</li>
+                        <li>- E Outros</li>
+                    </ul>
+                </div><!-- Orçamento Dados -->
+
+            </div><!-- Container -->
+        </section><!-- Orçamento  -->
 
         <section class="quebra">
             <blockquote class="quote-externo container">
