--- a/Origamid/BikeCraft/produtos.html
+++ b/Origamid/BikeCraft/produtos.html
@@ -136,7 +136,7 @@
                 <div class="orcamento-dados grid-8">
                     <h3>Dados</h3>
                     <span>+55 45 98888-7777</span>
-                    <span>orçamento@bikecraft.com</span>
+                    <span class="email">orçamento@bikecraft.com</span>
 
                     <h3>Monte a sua BikeCraft</h3>
                     <p>Escolha as Especificações</p>
