--- a/Origamid/BikeCraft/portfolio.html
+++ b/Origamid/BikeCraft/portfolio.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./style/grid.css">
         <link rel="stylesheet" href="./style/style.css">
         <link rel="stylesheet" href="./style/portfolio.css">
+        <link rel="stylesheet" href="./style/responsivo.css">
     </head>
     <body>
         
