--- a/Origamid/BikeCraft/sobre.html
+++ b/Origamid/BikeCraft/sobre.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="./style/normalize.css">
         <link rel="stylesheet" href="./style/reset.css">
         <link rel="stylesheet" href="./style/grid.css">
-        <link rel="stylesheet" href="./style/style.css">
         <link rel="stylesheet" href="./style/sobre.css">
+        <link rel="stylesheet" href="./style/responsivo.css">
     </head>
     <body>
         
