--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -168,5 +168,7 @@
             </div><!-- Copy -->
         </footer><!-- Footer -->
 
+        <script src="./js/simple-anime.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
