--- a/Origamid/BikeCraft/portfolio.html
+++ b/Origamid/BikeCraft/portfolio.html
@@ -40,17 +40,45 @@
             </div><!-- Container -->
         </section><!-- Introducao-Interna -->
 
-        <section class="container">
+        <section class="container" data-slide="quote" >
+
             <blockquote class="quote-cliente" >
                 <p>No mundo atual, a continua expansão de nossa atividade cumpre um papel essencial
                     na formulação da gestão inovadora da qual fazemos parte.
                 </p>
                 <cite>Barbara Moss</cite>
             </blockquote><!-- Quote-cliente -->
+
+            <blockquote class="quote-cliente" >
+                <p>Lorem Ipsum, a continua expansão de nossa atividade cumpre um papel essencial
+                    na formulação da gestão inovadora da qual fazemos parte.
+                </p>
+                <cite>João Pedro</cite>
+            </blockquote><!-- Quote-cliente -->
+
+            <blockquote class="quote-cliente" >
+                <p>No mundo atual, a continua expansão de nossa atividade cumpre um papel essencial
+                    na formulação da gestão inovadora da qual fazemos parte.
+                </p>
+                <cite>Maria da Silva</cite>
+            </blockquote><!-- Quote-cliente -->
         </section><!-- Container -->
 
         <section class="portfolio">
-            <div class="container">
+            <div class="container" data-slide="portfolio">
+
+                <ul class="portfolio-lista">
+                    <li class="grid-8" ><img src="./assets/portfolio/retro.jpg" alt="BikeCraft Retro"/></li>
+                    <li class="grid-8" ><img src="./assets/portfolio/passeio.jpg" alt="BikeCraft Passeio"/></li>
+                    <li class="grid-16" ><img src="./assets/portfolio/esporte.jpg" alt="BikeCraft Esporte"/></li>
+                </ul><!-- Portfolio Lista -->
+
+                <ul class="portfolio-lista">
+                    <li class="grid-8" ><img src="./assets/portfolio/passeio.jpg" alt="BikeCraft Passeio"/></li>
+                    <li class="grid-8" ><img src="./assets/portfolio/retro.jpg" alt="BikeCraft Retro"/></li>
+                    <li class="grid-16" ><img src="./assets/portfolio/esporte.jpg" alt="BikeCraft Esporte"/></li>
+                </ul><!-- Portfolio Lista -->
+
                 <ul class="portfolio-lista">
                     <li class="grid-8" ><img src="./assets/portfolio/retro.jpg" alt="BikeCraft Retro"/></li>
                     <li class="grid-8" ><img src="./assets/portfolio/passeio.jpg" alt="BikeCraft Passeio"/></li>
@@ -105,5 +133,7 @@
             </div><!-- Copy -->
         </footer><!-- Footer -->
 
+        <script src="./js/simple-slide.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
