--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -35,7 +35,7 @@
         <section class="introducao">
             <div class="container">
 
-                <h1 data-anime="500" class="fadeInUp">Bicicletas Feitas a Mão</h1>
+                <h1>Bicicletas Feitas a Mão</h1>
                 <blockquote class="quote-externo">
                     <p>"não tenha nada em cusa casa que voce não considere util ou acredita ser bonito"</p>
                     <cite>WILLIAM MORRIS</cite>
