--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -2,8 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>BikeCraft</title>
-        <meta name="description" content="projeto realizado pelas aulas da Origamid">
+        <title>BikeCraft - Bicicletas Personalizadas</title>
+        <meta name="description" content="Compre a sua bicicleta personalizada na BikeCraft, possuimos
+        modelos como passeio, retro e esporte.">
+        <meta name="author" content="BikeCraft">
+        <meta property="og:title" content="BikeCraft - Bicicletas Personalizadas" />
+        <meta property="og:url" content="https://www.bikecraft.com.br" />
+        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+        <meta name="description" content="Compre a sua bicicleta personalizada na BikeCraft, possuimos
+        modelos como passeio, retro e esporte">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style/normalize.css">
         <link rel="stylesheet" href="./style/reset.css">
