--- a/Origamid/BikeCraft/index.html
+++ b/Origamid/BikeCraft/index.html
@@ -8,6 +8,7 @@
         <meta name="author" content="BikeCraft">
         <meta property="og:title" content="BikeCraft - Bicicletas Personalizadas" />
         <meta property="og:url" content="https://www.bikecraft.com.br" />
+        <!-- Imagem para compartilhamento -->
         <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
         <meta name="description" content="Compre a sua bicicleta personalizada na BikeCraft, possuimos
         modelos como passeio, retro e esporte">
