--- a/AnimaisFantasticos/index.html
+++ b/AnimaisFantasticos/index.html
@@ -9,8 +9,138 @@
     </head>
     <body>
 
-        
+        <nav class="menu">
+            <ul>
+                <li><a href="#animais">Animais</a></li>
+                <li><a href="#faq">Faq</a></li>
+                <li><a href="#contato">Contato</a></li>
+                <li><a href="https://www.origamid.com">Dev</a></li>
+            </ul>
+        </nav><!-- Nav Menu-->
 
+        <section class="grid-section animais" id="animais">
+            <h1 class="titulo">Animais Fantasticos</h1>
+            <ul>
+                <li>
+                    <img src="./images/imagem1.jpg" alt="Animais Fantasticos">
+                </li>
+                <li>
+                    <img src="./images/imagem2.jpg" alt="Animais Fantasticos">
+                </li>
+                <li>
+                    <img src="./images/imagem3.jpg" alt="Animais Fantasticos">
+                </li>
+                <li>
+                    <img src="./images/imagem4.jpg" alt="Animais Fantasticos">
+                </li>
+                <li>
+                    <img src="./images/imagem5.jpg" alt="Animais Fantasticos">
+                </li>
+                <li>
+                    <img src="./images/imagem6.jpg" alt="Animais Fantasticos">
+                </li>
+            </ul>
+
+            <div class="animais-descricao">
+
+                <section>
+                    <h2>Raposa</h2>
+                    <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                      por um focinho comprido e uma cauda longa e peluda.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                    <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                      qual a raposa vermelha é a mais comum.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                </section>
+
+                <section>
+                    <h2>Esquilo</h2>
+                    <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                      por um focinho comprido e uma cauda longa e peluda.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                    <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                      qual a raposa vermelha é a mais comum.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                </section>
+
+                <section>
+                    <h2>Urso</h2>
+                    <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                      por um focinho comprido e uma cauda longa e peluda.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                    <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                      qual a raposa vermelha é a mais comum.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                </section>
+
+                <section>
+                    <h2>Lobo</h2>
+                    <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                      por um focinho comprido e uma cauda longa e peluda.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                    <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                      qual a raposa vermelha é a mais comum.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                </section>
+
+                <section>
+                    <h2>Macaco</h2>
+                    <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                      por um focinho comprido e uma cauda longa e peluda.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                    <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                      qual a raposa vermelha é a mais comum.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                </section>
+
+                <section>
+                    <h2>Leão</h2>
+                    <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                      por um focinho comprido e uma cauda longa e peluda.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                    <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                      qual a raposa vermelha é a mais comum.</p>
+                    <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                </section>
+            </div><!-- animais-descricao -->
+        </section><!-- grid-section animais-->
+
+        <section class="grid-section faq" id="faq">
+            <h1>FAQ</h1>
+            <dl>
+                <dt>Qual idade dos animais?</dt>
+                <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                por um focinho comprido e uma cauda longa e peluda.</dd>
+
+                <dt>Eles são fantásticos?</dt>
+                <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+
+                <dt>Qual a diferença?</dt>
+                <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+
+                <dt>Como proteger?</dt>
+                <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+            </dl>
+        </section><!-- grid-section faq -->
+
+        <section class="grid-section contato" id="contato">
+            <h1>Contato</h1>
+            <div class="mapa">
+                <img src="./images/mapa.png" alt="Mapa">
+            </div><!-- Mapa -->
+            
+            <ul class="dados">
+                <li>contato@contato.com</li>
+                <li>(45) 9 9999 - 8888</li>
+                <li>Rua Fulano de Tal, n21</li>
+                <li>Curitiba - PR</li>
+            </ul><!-- dados -->
+
+        </section><!-- grid-section contato -->
+
+        <footer>
+            <p>@ Todos os direitos Reservados - 2021</p>
+        </footer>
 
         <script src="./js/script.js"></script>
     </body>
