--- a/AnimaisFantasticos/index.html
+++ b/AnimaisFantasticos/index.html
@@ -20,7 +20,7 @@
 
         <section class="grid-section animais" id="animais">
             <h1 class="titulo">Animais Fantasticos</h1>
-            <ul>
+            <ul class="animais-list">
                 <li>
                     <img src="./images/imagem1.jpg" alt="Animais Fantasticos">
                 </li>
@@ -106,8 +106,8 @@
         </section><!-- grid-section animais-->
 
         <section class="grid-section faq" id="faq">
-            <h1>FAQ</h1>
-            <dl>
+            <h1 class="titulo">FAQ</h1>
+            <dl class="faq-lista">
                 <dt>Qual idade dos animais?</dt>
                 <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
                 por um focinho comprido e uma cauda longa e peluda.</dd>
@@ -124,7 +124,7 @@
         </section><!-- grid-section faq -->
 
         <section class="grid-section contato" id="contato">
-            <h1>Contato</h1>
+            <h1 class="titulo">Contato</h1>
             <div class="mapa">
                 <img src="./images/mapa.png" alt="Mapa">
             </div><!-- Mapa -->
@@ -138,7 +138,7 @@
 
         </section><!-- grid-section contato -->
 
-        <footer>
+        <footer class="copy">
             <p>@ Todos os direitos Reservados - 2021</p>
         </footer>
 
