--- a/AnimaisFantasticos/index.html
+++ b/AnimaisFantasticos/index.html
@@ -20,7 +20,7 @@
 
         <section class="grid-section animais" id="animais">
             <h1 class="titulo">Animais Fantasticos</h1>
-            <ul class="animais-list">
+            <ul class="animais-list js-tabmenu">
                 <li>
                     <img src="./images/imagem1.jpg" alt="Animais Fantasticos">
                 </li>
@@ -41,7 +41,7 @@
                 </li>
             </ul>
 
-            <div class="animais-descricao">
+            <div class="animais-descricao js-tabcontent">
 
                 <section>
                     <h2>Raposa</h2>
