--- a/AnimaisFantasticos/index.html
+++ b/AnimaisFantasticos/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 
-        <nav class="menu">
+        <nav class="menu js-menu">
             <ul>
                 <li><a href="#animais">Animais</a></li>
                 <li><a href="#faq">Faq</a></li>
@@ -143,5 +143,6 @@
         </footer>
 
         <script src="./js/script.js"></script>
+        <script src="./js/scrollmenu.js"></script>
     </body>
 </html>
