--- a/AnimaisFantasticos/index.html
+++ b/AnimaisFantasticos/index.html
@@ -144,5 +144,7 @@
 
         <script src="./js/script.js"></script>
         <script src="./js/scrollmenu.js"></script>
+        <script src="./js/accordion.js"></script>
+        <script src="./js/navegacao.js" ></script>
     </body>
 </html>
