--- a/AnimaisFantasticos/index.html
+++ b/AnimaisFantasticos/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav><!-- Nav Menu-->
 
-        <section class="grid-section animais" id="animais">
+        <section class="grid-section animais js-scroll" id="animais">
             <h1 class="titulo">Animais Fantasticos</h1>
             <ul class="animais-list js-tabmenu">
                 <li>
@@ -105,7 +105,7 @@
             </div><!-- animais-descricao -->
         </section><!-- grid-section animais-->
 
-        <section class="grid-section faq" id="faq">
+        <section class="grid-section faq js-scroll" id="faq">
             <h1 class="titulo">FAQ</h1>
             <dl class="faq-lista js-accordion">
                 <dt>Qual idade dos animais?</dt>
@@ -123,7 +123,7 @@
             </dl>
         </section><!-- grid-section faq -->
 
-        <section class="grid-section contato" id="contato">
+        <section class="grid-section contato js-scroll" id="contato">
             <h1 class="titulo">Contato</h1>
             <div class="mapa">
                 <img src="./images/mapa.png" alt="Mapa">
@@ -146,5 +146,6 @@
         <script src="./js/scrollmenu.js"></script>
         <script src="./js/accordion.js"></script>
         <script src="./js/navegacao.js" ></script>
+        <script src="./js/scrollAnimation.js"></script>
     </body>
 </html>
