--- a/AnimaisFantasticos/index.html
+++ b/AnimaisFantasticos/index.html
@@ -147,5 +147,8 @@
         <script src="./js/accordion.js"></script>
         <script src="./js/navegacao.js" ></script>
         <script src="./js/scrollAnimation.js"></script>
+
+        <!-- Script das Aulas -->
+        <script src="./js/Aula/constructorFunction.js"></script>
     </body>
 </html>
