--- a/AnimaisFantasticos/index.html
+++ b/AnimaisFantasticos/index.html
@@ -6,11 +6,13 @@
         <title>Animais Fantasticos</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./style/style.css" rel="stylesheet" />
+        <link href="./style/responsive.css" rel="stylesheet">
     </head>
     <body>
 
         <nav class="menu js-menu">
             <ul>
+                <li><a href="./Aula/aula.html">Aula</a></li>
                 <li><a href="#animais">Animais</a></li>
                 <li><a href="#faq">Faq</a></li>
                 <li><a href="#contato">Contato</a></li>
