--- a/AnimaisFantasticos/Aula/aula.html
+++ b/AnimaisFantasticos/Aula/aula.html
@@ -9,11 +9,11 @@
     </head>
     <body>
 
-        <div style="margin: 0 auto; text-align: center;">
+        <ul style="margin: 0 auto;">
             <li>Item 1</li>
             <li>Item 1</li>
             <li>Item 1</li>
-        </div>
+        </ul>
 
         <script src="../js/Aula/constructorFunction.js"></script>
     </body>
